force-app/main/default/objects/license_order__c/license_order__c.object-meta.xml
<CustomObject>
    <label>License Order</label>
    <nameField>
        <label>License Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>