force-app/main/default/objects/license_order__c/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <description>We are using this picklist for providing App Name as there is App specific</description>
    <inlineHelpText>Please choose the Proper App Name/Device for which license is needed</inlineHelpText>
    <label>Requested For</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Application_Name</valueSetName>
    </valueSet>
</CustomField>