force-app/main/default/objects/license_order__c/fields/Cori_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Cori_Serial_Number__c</fullName>
    <description>Field for storing Cori Serial Number</description>
    <inlineHelpText>Device Serial Number (Usually starts from SN, DV, etc.)</inlineHelpText>
    <label>Cori Serial Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>