force-app/main/default/objects/license_order__c/fields/Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date__c</fullName>
    <description>Storing date of Record Creation</description>
    <formula>Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date when Record was created</inlineHelpText>
    <label>Creation Date</label>
    <type>Date</type>
</CustomField>