force-app/main/default/objects/license_order__c/fields/Licence__c.field-meta.xml
<CustomField>
    <fullName>Licence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Licence</label>
    <referenceTo>Licence__c</referenceTo>
    <relationshipLabel>License Orders</relationshipLabel>
    <relationshipName>License_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>