force-app/main/default/objects/license_order__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <description>Filed for saving License Number</description>
    <inlineHelpText>License Number for Specified device MAC address</inlineHelpText>
    <label>License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>