force-app/main/default/objects/license_order__c/fields/Licensed__c.field-meta.xml
<CustomField>
    <fullName>Licensed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is checked if license was issued</description>
    <inlineHelpText>Field is checked if license was issued</inlineHelpText>
    <label>Licensed</label>
    <type>Checkbox</type>
</CustomField>