force-app/main/default/objects/license_order__c/fields/MAC_address__c.field-meta.xml
<CustomField>
    <fullName>MAC_address__c</fullName>
    <description>Field for saving MAC address info</description>
    <inlineHelpText>This field is for providing device MAC address</inlineHelpText>
    <label>MAC address</label>
    <length>30</length>
    <type>Text</type>
</CustomField>