force-app/main/default/objects/license_order__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes field is using for storing Request Notes</description>
    <inlineHelpText>Notes to differentiate Requests</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>