force-app/main/default/objects/license_order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <defaultValue>&quot;License Order&quot;</defaultValue>
    <description>Field for storing Record Type</description>
    <inlineHelpText>Field Storing Licence Order Record Type</inlineHelpText>
    <label>Order Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>