force-app/main/default/objects/license_order__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Products from Database</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>License Orders</relationshipLabel>
    <relationshipName>License_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>