force-app/main/default/objects/license_order__c/fields/Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Request_Number__c</fullName>
    <description>Field for storing Request Number</description>
    <displayFormat>REQ{0000000}</displayFormat>
    <inlineHelpText>This field shows Request Number</inlineHelpText>
    <label>Request Number</label>
    <type>AutoNumber</type>
</CustomField>