force-app/main/default/objects/license_order__c/recordTypes/License_Order_During_New_Record_Creation.recordType-meta.xml
<RecordType>
    <fullName>License_Order_During_New_Record_Creation</fullName>
    <active>true</active>
    <description>Record type for storing limited amount of the fields that are needed during new Record Creation</description>
    <label>License Order During New Record Creation</label>
</RecordType>