force-app/main/default/objects/license_order__c/recordTypes/License_Order_General_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>License_Order_General_Record_Type</fullName>
    <active>true</active>
    <description>Will be used to display all the field after new record creation</description>
    <label>License Order General Record Type</label>
</RecordType>