force-app/main/default/objects/license_order__c/validationRules/Editing_Installation_Key_If_MAC_added.validationRule-meta.xml
<ValidationRule>
    <fullName>Editing_Installation_Key_If_MAC_added</fullName>
    <active>true</active>
    <description>Restricting possibility to provide License Key if Ticket is In progress, MAC address is in place</description>
    <errorConditionFormula>AND(ISCHANGED(Installation_Key__c), NOT(ISBLANK(MAC_address__c)), NOT(ISCHANGED(MAC_address__c)))</errorConditionFormula>
    <errorDisplayField>Installation_Key__c</errorDisplayField>
    <errorMessage>You can&apos;t Provide Installation Key if MAC address is already added to the ticket.
Please cancel request if needed and create a new one.</errorMessage>
</ValidationRule>