force-app/main/default/objects/license_order__c/validationRules/Editing_MAC_when_License_Ordered.validationRule-meta.xml
<ValidationRule>
    <fullName>Editing_MAC_when_License_Ordered</fullName>
    <active>true</active>
    <description>We are using this rule to restrict MAC value change when Status is not New</description>
    <errorConditionFormula>AND( 
ISCHANGED
(MAC_address__c),
NOT
(ISPICKVAL
( Status__c , &quot;New&quot;)
)
)</errorConditionFormula>
    <errorDisplayField>MAC_address__c</errorDisplayField>
    <errorMessage>It is not possible to change MAC address value if Request is not in &quot;New&quot; Status.
Please cancel this request and create a new one if needed.</errorMessage>
</ValidationRule>