force-app/main/default/objects/license_order__c/validationRules/MAC_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>MAC_Length</fullName>
    <active>true</active>
    <description>We are using this rule to limit NAC address length</description>
    <errorConditionFormula>LEN( MAC_address__c ) &gt; 17</errorConditionFormula>
    <errorDisplayField>MAC_address__c</errorDisplayField>
    <errorMessage>MAC address should not exceed 17 characters.</errorMessage>
</ValidationRule>