force-app/main/default/objects/license_order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Request_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Licensed__c</columns>
    <columns>Order_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>